Calculator/Mutants/Mutant_7/report.txt
Mutants\Mutant_7\calculator\ExpressionParser.java:71: error: duplicate case label
            case '+':
            ^
1 error
Compilation Failed, Mutant killed by the compiler
